--- a/research/manual_testing.ipynb
+++ b/research/manual_testing.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tw1fgeEKk-E'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "URL1 = \"https://www.youtube.com/watch?v=Tw1fgeEKk-E\"\n",
+    "URL1.split(\"=\")[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -17,34 +38,13 @@
     }
    ],
    "source": [
-    "URL1 = \"https://www.youtube.com/watch?v=Tw1fgeEKk-E\"\n",
-    "URL1.split(\"=\")[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Tw1fgeEKk-E'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "URL2 = \"https://www.youtube.com/watch?v=Tw1fgeEKk-E&t=198s\"\n",
     "URL2.split(\"=\")[-2][:-2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "'Tw1fgeEKk-E'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,15 +72,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-10-21 15:27:23,248: INFO: youtube]: video starts at: 0\n",
-      "[2022-10-21 15:27:23,249: INFO: youtube]: embed URL: https://www.youtube.com/embed/Tw1fgeEKk-E?start=0\n"
+      "[2022-10-22 13:38:53,643: INFO: youtube]: video starts at: 0\n",
+      "[2022-10-22 13:38:53,653: INFO: youtube]: embed URL: https://www.youtube.com/embed/Tw1fgeEKk-E?start=0\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<iframe\n",
-       "            width=\"700\"\n",
+       "            width=\"900\"\n",
        "            height=\"500\"\n",
        "            src=\"https://www.youtube.com/embed/Tw1fgeEKk-E?start=0\"\n",
        "            title=\"YouTube video player\"\n",
@@ -111,9 +111,89 @@
     }
    ],
    "source": [
-    "from myIPYNBrenderer.youtube import render_youtube_video\n",
-    "render_youtube_video(URL1)"
+    "from myIPYNBrenderer import render_YouTube_video\n",
+    "render_YouTube_video(URL1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from myIPYNBrenderer.site import render_site\n",
+    "from myIPYNBrenderer import render_site"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"90%\"\n",
+       "            height=\"500\"\n",
+       "            src=\"https://pytorch.org/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f32f816ff10>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SUCCESS'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "URL1 = \"https://pytorch.org/\"\n",
+    "render_site(URL1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
